--- a/src/app/components/exchange-rate-now/exchange-rate-now.component.html
+++ b/src/app/components/exchange-rate-now/exchange-rate-now.component.html
@@ -1,10 +1,10 @@
 <div class="display-tittle" fxLayout="row" fxLayoutAlign="space-between center">
   <div>
     <p class="rate">Exchange rate now</p>
-    <p class="lastUpdatedAt">{{ lastUpdatedAt }}</p>
+    <p class="lastUpdatedDate">{{ lastUpdatedDate }}</p>
   </div>
   <div fxLayout="column" fxLayoutAlign="center center">
-    <h2>{{ showedCurrency }}/BRL</h2>
+    <h2>{{ currencyType }}/BRL</h2>
   </div>
 </div>
 
