--- a/src/app/components/input-exchange/input-exchange.component.html
+++ b/src/app/components/input-exchange/input-exchange.component.html
@@ -11,6 +11,11 @@
   </mat-select>
 </mat-form-field>
 
-<button mat-flat-button color="primary" class="button" (click)="displayInfos()">
+<button
+  mat-flat-button
+  color="primary"
+  class="button"
+  (click)="getSetAndDisplayInfos()"
+>
   EXCHANGE RESULT
 </button>
