--- a/src/app/components/daily-information-cards/daily-information-cards.component.css
+++ b/src/app/components/daily-information-cards/daily-information-cards.component.css
@@ -1,3 +1,9 @@
+.table {
+    background-color: #F4F4F4;
+    width: 100%;
+    padding: 10px;
+}
+
 .card {
     background-color: #FFF;
     width: 100%;
