--- a/src/app/components/exchange-rate-now/exchange-rate-now.component.css
+++ b/src/app/components/exchange-rate-now/exchange-rate-now.component.css
@@ -9,7 +9,7 @@
         font-size: 18px;
     }
 
-    .lastUpdatedAt {
+    .lastUpdatedDate {
         margin-top: 6px;
         font-weight: 400;
         font-size: 14px;
